EngineersGate オリジナル課題 Java関連 →画面設計

--- a/public/pages-friends.html
+++ b/public/pages-friends.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
+  <title>SNSサイト - フレンド</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -508,13 +508,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
-        </ol>
-      </nav>
+      <h1>フレンド</h1>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
@@ -544,35 +538,35 @@
                     <td>Brandon Jacob</td>
                     <td>Designer</td>
                     <td>28</td>
-                    <td><button type="button" class="btn btn-primary rounded-pill">Primary</button></td>
+                    <td><button type="button" class="btn btn-primary rounded-pill">申請中</button></td>
                   </tr>
                   <tr>
                     <th scope="row"><img src="assets/img/news-2.jpg" alt="" style="width: 80px;"></th>
                     <td>Bridie Kessler</td>
                     <td>Developer</td>
                     <td>35</td>
-                    <td><button type="button" class="btn btn-secondary rounded-pill">Secondary</button></td>
+                    <td><button type="button" class="btn btn-secondary rounded-pill">承認済み</button></td>
                   </tr>
                   <tr>
                     <th scope="row"><img src="assets/img/news-3.jpg" alt="" style="width: 80px;"></th>
                     <td>Ashleigh Langosh</td>
                     <td>Finance</td>
                     <td>45</td>
-                    <td><button type="button" class="btn btn-secondary rounded-pill">Secondary</button></td>
+                    <td><button type="button" class="btn btn-secondary rounded-pill">承認済み</button></td>
                   </tr>
                   <tr>
                     <th scope="row"><img src="assets/img/news-4.jpg" alt="" style="width: 80px;"></th>
                     <td>Angus Grady</td>
                     <td>HR</td>
                     <td>34</td>
-                    <td><button type="button" class="btn btn-primary rounded-pill">Primary</button></td>
+                    <td><button type="button" class="btn btn-primary rounded-pill">申請中</button></td>
                   </tr>
                   <tr>
                     <th scope="row"><img src="assets/img/news-5.jpg" alt="" style="width: 80px;"></th>
                     <td>Raheem Lehner</td>
                     <td>Dynamic Division Officer</td>
                     <td>47</td>
-                    <td><button type="button" class="btn btn-secondary rounded-pill">Secondary</button></td>
+                    <td><button type="button" class="btn btn-secondary rounded-pill">承認済み</button></td>
                   </tr>
                 </tbody>
               </table>
