--- a/public/pages-register.html
+++ b/public/pages-register.html
@@ -56,7 +56,7 @@
                     <p class="text-center small">個人情報を入力してアカウントを作成してください。</p>
                   </div>
 
-                  <form class="row g-3 needs-validation" novalidate>
+                  <form class="row g-3 needs-validation" action="pages-registered.html" novalidate>
                     <div class="col-12">
                       <label for="yourName" class="form-label">お名前</label>
                       <input type="text" name="name" class="form-control" id="yourName" required>
@@ -70,11 +70,11 @@
                     </div>
 
                     <div class="col-12">
-                      <label for="yourUsername" class="form-label">ユーザー名</label>
+                      <label for="yourUsername" class="form-label">ログインID</label>
                       <div class="input-group has-validation">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="text" name="username" class="form-control" id="yourUsername" required>
-                        <div class="invalid-feedback">ユーザー名を入力してください。</div>
+                        <div class="invalid-feedback">ログインIDを入力してください。</div>
                       </div>
                     </div>
 
